--- a/src/app/pet/pet.page.html
+++ b/src/app/pet/pet.page.html
@@ -1,27 +1,58 @@
 <ion-content [fullscreen]="true">
-  <img src="../../assets/image/sosLogo.jpeg" />
+  <ion-slides>
+
+    <ion-slide class="slide1">
+
+      <div class="container">
+        <img src="../../assets/image/sosLogo.jpeg" />
+        <p>Clique para emergência</p>
+      </div>
+
+      <ion-footer>
+
+        <ion-row>
+
+          <div class="options">
+            <ion-avatar>
+              <ion-icon name="person"></ion-icon>
+            </ion-avatar>
+    
+            <p>Perfil</p>
+          </div>
+    
+          <div class="options">
+            <ion-avatar>
+              <ion-icon name="paw"></ion-icon>
+            </ion-avatar>
+    
+            <p>Pets</p>
+          </div>
+    
+          <div class="options">
+            <ion-avatar>
+              <ion-icon name="star"></ion-icon>
+            </ion-avatar>
+    
+            <p>Favoritos</p>
+          </div>
+    
+          <div class="options">
+            <ion-avatar>
+              <ion-icon name="settings"></ion-icon>
+            </ion-avatar>
+    
+            <p>Opcões</p>
+          </div>
+    
+        </ion-row>
+
+      </ion-footer>
+
+    </ion-slide>
+
+    <ion-slide>
+      <div id="map">teste</div>
+    </ion-slide>
+
+  </ion-slides>
 </ion-content>
-
-  <ion-footer no-border-top>
-
-    <ion-row>
-
-      <ion-avatar>
-        <ion-icon name="person"></ion-icon>
-      </ion-avatar>
-
-      <ion-avatar>
-        <ion-icon name="paw"></ion-icon>
-      </ion-avatar>
-
-      <ion-avatar>
-        <ion-icon name="star"></ion-icon>
-      </ion-avatar>
-
-      <ion-avatar>
-        <ion-icon name="settings"></ion-icon>
-      </ion-avatar>
-
-    </ion-row>
-
-  </ion-footer>
