--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -78,7 +78,7 @@
   /** favorite **/
   --ion-color-favorite: #ffffff;
   --ion-color-favorite-rgb: 105,187,123;
-  --ion-color-favorite-contrast: #00818a;
+  --ion-color-favorite-contrast: #00b5c2;
   --ion-color-favorite-contrast-rgb: 255,255,255;
   --ion-color-favorite-shade: #01AEBC;
   --ion-color-favorite-tint: #01AEBC;
