--- a/src/app/cadastro/cadastro.page.scss
+++ b/src/app/cadastro/cadastro.page.scss
@@ -1,6 +1,5 @@
-.container {
-    --background: rgb(0, 0, 0) url("../../assets/image/background.jpg") no-repeat center center / cover;
-    filter: opacity(0.7);
+ion-content {
+    --background: rgb(1, 174, 188) url("../../assets/image/login6.jpg") no-repeat center center / cover;
 }
 
 #centralizar {
@@ -8,5 +7,52 @@
     left: 0px;
     right: 0px;
     top: 5%;
-    margin: 0px 20px;
+    margin: 0px 15px;
+}
+
+.section {
+    display: flex;
+    justify-content: center;
+
+    img {
+        height: 220px;
+        width: 220px;
+    }
+}
+
+.section2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+ion-input {
+    width: 85%;
+    margin-top: 25px;
+
+    border-bottom: 1px solid rgba(255, 255, 255, 0.459);
+
+    text-align: start;
+}
+
+p {
+    text-align: end;
+    margin-right: 26px;
+
+    a {
+        color: rgba(255, 255, 255, 0.589);
+    }
+}
+
+ion-row {
+    margin-top: 30px;
+
+    ion-col {
+        text-align: center;
+
+        span {
+            color: transparent;
+        }
+    }
 }
