--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,13 +1,38 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-    </ion-buttons>
+<ion-content [fullscreen]="true">
 
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
+  <div id="centralizar">
+    <div class="section">
+      <img src="../../assets/image/logo_transparente.png" alt="Logo">
+    </div>
 
-<ion-content>
+    <form class="ion-text-center">
+
+      <!-- <ion-card> -->
+        <div class="section2">
+          <ion-input type="email" placeholder="Digite seu email"><ion-icon name="mail-outline"></ion-icon></ion-input>
+    
+          <ion-input type="password" placeholder="Digite sua senha"><ion-icon name="lock-closed-outline"></ion-icon></ion-input>
+        </div>
+  
+        <p>
+          <a href="#">Esqueci a senha</a>
+        </p>
+  
+        <ion-row>
+  
+          <ion-col>
+            <ion-button class="font-Bold" expand="round" fill="outline" color="favorite">Começar</ion-button>
+          </ion-col>
+  
+          <ion-col>
+            <ion-button class="font-Bold" expand="round" color="favorite"><span>...</span> Login <span>...</span></ion-button>
+          </ion-col>
+        </ion-row>
+      <!-- </ion-card> -->
+
+      
+
+    </form>
+  </div>
 
 </ion-content>
