--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -21,11 +21,11 @@
         <ion-row>
   
           <ion-col>
-            <ion-button class="font-Bold" expand="round" fill="outline" color="favorite">Começar</ion-button>
+            <ion-button class="font-Bold" expand="round" fill="outline" color="favorite" (click)="alertInicial()">Cancelar</ion-button>
           </ion-col>
   
           <ion-col>
-            <ion-button class="font-Bold" expand="round" color="favorite"><span>...</span> Login <span>...</span></ion-button>
+            <ion-button class="font-Bold" expand="round" color="favorite" (click)="carregarTela('pet')"><span>...</span> Login <span>...</span></ion-button>
           </ion-col>
         </ion-row>
       <!-- </ion-card> -->
