--- a/src/app/add-pet/add-pet.page.scss
+++ b/src/app/add-pet/add-pet.page.scss
@@ -6,7 +6,7 @@ ion-content {
     position: absolute;
     left: 0px;
     right: 0px;
-    top: 5%;
+    top: 18%;
     margin: 0px 15px;
 }
 
@@ -15,8 +15,10 @@ ion-content {
     justify-content: center;
 
     img {
-        height: 200px;
-        width: 200px;
+        height: 100px;
+        width: 100px;
+        opacity: .9;
+        border-radius: 50%;
     }
 }
 
@@ -24,6 +26,11 @@ ion-content {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    background-color: rgba(255, 255, 255, 0.267);
+    border-radius: 10px;
+
+    padding: 10px;
 }
 
 
@@ -36,17 +43,30 @@ ion-input {
     text-align: start;
 }
 
-p {
-    text-align: end;
-    margin-right: 26px;
+ion-radio-group {
+    width: 100%;
 
-    a {
-        color: rgba(255, 255, 255, 0.589);
+    ion-list-header {
+        ion-label {
+            // text-align: start;
+            font-size: 1rem;
+        }
+    }
+
+    ion-item {
+        ion-label {
+            color: rgba(255, 255, 255, 0.829);
+        }
+    }
+
+    ion-radio {
+        --color: rgba(255, 255, 255, 0.767);
+        --color-checked: rgb(17, 139, 148);
     }
 }
 
-ion-row {
-    margin-top: 30px;
+.btn {
+    margin-top: 20px;
 
     ion-col {
         text-align: center;
