--- a/src/app/pet/pet.page.scss
+++ b/src/app/pet/pet.page.scss
@@ -2,20 +2,19 @@ ion-content {
     --ion-background-color: #01aebc;
     // --background: linear-gradient(rgba(1,174,188, 1) 0%, rgba(1,174,188,1) 13.5%, rgba(1,174,188,1) 33.33%, rgba(255,255,255) 100%) !important;
    
-   ion-slides {
+  //  ion-slides {
      height: 100vh;
 
      #map {
-       height: 100%;
+       height: 85%;
        width: 100%;
-       border: 2px solid red;
      }
-   } 
+  //  } 
     
-  .slide1 {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
+  // .slide1 {
+  //   display: flex;
+  //   justify-content: space-between;
+  //   flex-direction: column;
 
     .container {
       margin-top: 65px;
@@ -70,7 +69,7 @@ ion-content {
 
 
         }}
-  }
+  // }
   }
   
   
