--- a/src/global.scss
+++ b/src/global.scss
@@ -29,3 +29,11 @@
 .font-Bold {
     font-weight: bold;
 }
+
+.searchbar-input-container {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+
+    .searchbar-input {
+        border-radius: 0 !important;
+    }
+}
