--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -82,6 +82,14 @@
   --ion-color-favorite-contrast-rgb: 255,255,255;
   --ion-color-favorite-shade: #01AEBC;
   --ion-color-favorite-tint: #01AEBC;
+
+  /** favorite2 **/
+  --ion-color-favorite2: #00b5c2;
+  --ion-color-favorite2-rgb: 105,187,123;
+  --ion-color-favorite2-contrast: #ffffff;
+  --ion-color-favorite2-contrast-rgb: 255,255,255;
+  --ion-color-favorite2-shade: #01AEBC;
+  --ion-color-favorite2-tint: #01AEBC;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -161,6 +169,15 @@
       --ion-color-contrast-rgb: var(--ion-color-favorite-contrast-rgb);
       --ion-color-shade: var(--ion-color-favorite-shade);
       --ion-color-tint: var(--ion-color-favorite-tint);
+    }
+
+    .ion-color-favorite2 {
+      --ion-color-base: var(--ion-color-favorite2);
+      --ion-color-base-rgb: var(--ion-color-favorite2-rgb);
+      --ion-color-contrast: var(--ion-color-favorite2-contrast);
+      --ion-color-contrast-rgb: var(--ion-color-favorite2-contrast-rgb);
+      --ion-color-shade: var(--ion-color-favorite2-shade);
+      --ion-color-tint: var(--ion-color-favorite2-tint);
     }
 
   }
