--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,7 +6,7 @@
 
     <ion-row>
       <ion-col>
-        <ion-button color="favorite" shape="round" (click)="carregarTela('login')">Login</ion-button>
+        <ion-button color="favorite" shape="round" (click)="carregarTela('login')" class="login"> <span>...</span> Login <span>...</span> </ion-button>
       </ion-col>
 
       <ion-col>
