--- a/src/app/pet/pet.page.html
+++ b/src/app/pet/pet.page.html
@@ -1,111 +1,7 @@
-<!-- <ion-header>
-  <ion-toolbar>
-    <ion-title>Menu</ion-title>
-  </ion-toolbar>
-</ion-header> -->
-
 <ion-content [fullscreen]="true">
-    <!-- <ion-slide> -->
-      <!-- <ion-fab slot="fixed" vertical="top" horizontal="start" (click)="carregarTela('menu')">
-        <ion-fab-button color="favorite"><ion-icon name="menu-outline"></ion-icon></ion-fab-button>
-      </ion-fab> -->
       
-      <div #map id="map">
-        <ion-searchbar placeholder="Filter Schedules" animated></ion-searchbar>
-      </div>
-
-      <!-- <ion-footer>
-
-        <ion-row>
-
-          <div class="options" (click)="carregarTela('perfil')">
-            <ion-avatar>
-              <ion-icon name="person"></ion-icon>
-            </ion-avatar>
-    
-            <p>Perfil</p>
-          </div>
-    
-          <div class="options" (click)="carregarTela('pets')">
-            <ion-avatar>
-              <ion-icon name="paw"></ion-icon>
-            </ion-avatar>
-    
-            <p>Pets</p>
-          </div>
-    
-          <div class="options" (click)="carregarTela('favorito')">
-            <ion-avatar>
-              <ion-icon name="star"></ion-icon>
-            </ion-avatar>
-    
-            <p>Favoritos</p>
-          </div>
-    
-          <div class="options" (click)="carregarTela('opcoes')">
-            <ion-avatar>
-              <ion-icon name="settings"></ion-icon>
-            </ion-avatar>
-    
-            <p>Opcões</p>
-          </div>
-    
-        </ion-row>
-
-      </ion-footer> -->
-
-    <!-- </ion-slide> -->
-
-    <!-- <ion-slide class="slide1">
-
-      <div class="container">
-        <img src="../../assets/image/sosLogo.jpeg" />
-        <p>Clique para emergência</p>
-      </div>
-
-      <ion-footer>
-
-        <ion-row>
-
-          <div class="options" (click)="carregarTela('perfil')">
-            <ion-avatar>
-              <ion-icon name="person"></ion-icon>
-            </ion-avatar>
-    
-            <p>Perfil</p>
-          </div>
-    
-          <div class="options" (click)="carregarTela('pets')">
-            <ion-avatar>
-              <ion-icon name="paw"></ion-icon>
-            </ion-avatar>
-    
-            <p>Pets</p>
-          </div>
-    
-          <div class="options" (click)="carregarTela('favorito')">
-            <ion-avatar>
-              <ion-icon name="star"></ion-icon>
-            </ion-avatar>
-    
-            <p>Favoritos</p>
-          </div>
-    
-          <div class="options" (click)="carregarTela('opcoes')">
-            <ion-avatar>
-              <ion-icon name="settings"></ion-icon>
-            </ion-avatar>
-    
-            <p>Opcões</p>
-          </div>
-    
-        </ion-row>
-
-      </ion-footer>
-
-    </ion-slide> -->
-
-  <!-- </ion-slides> -->
+    <ion-searchbar [(ngModel)]="search" (ionChange)="searchChanged($event)" placeholder="Procurar veterinários" animated></ion-searchbar>
+    <div #map id="map"></div>
   
   <ion-tabs>
     <ion-tab-bar color="favorite2" slot="bottom" lines="none">
