--- a/src/global.scss
+++ b/src/global.scss
@@ -34,6 +34,6 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 
     .searchbar-input {
-        border-radius: 0 !important;
+        border-radius: 0px !important;
     }
 }
