--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -19,6 +19,10 @@ ion-footer {
 
   ion-col {
     text-align: center;
+
+    .login span {
+      color: transparent;
+    }
   
     ion-button {
       font-weight: bold;
