--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,38 +1,54 @@
 <ion-content [fullscreen]="true">
-
   <div id="centralizar">
     <div class="section">
-      <img src="../../assets/image/logo_transparente.png" alt="Logo">
+      <img src="../../assets/image/logo_transparente.png" alt="Logo" />
     </div>
 
-    <form class="ion-text-center">
-
+    <form class="ion-text-center" [formGroup]="loginForm">
       <!-- <ion-card> -->
-        <div class="section2">
-          <ion-input type="email" placeholder="Digite seu email"><ion-icon name="mail-outline"></ion-icon></ion-input>
-    
-          <ion-input type="password" placeholder="Digite sua senha"><ion-icon name="lock-closed-outline"></ion-icon></ion-input>
-        </div>
-  
-        <p>
-          <a href="#">Esqueci a senha</a>
-        </p>
-  
-        <ion-row>
-  
-          <ion-col>
-            <ion-button class="font-Bold" expand="round" fill="outline" color="favorite" (click)="alertInicial()">Cancelar</ion-button>
-          </ion-col>
-  
-          <ion-col>
-            <ion-button class="font-Bold" expand="round" color="favorite" (click)="carregarTela('pet')"><span>...</span> Login <span>...</span></ion-button>
-          </ion-col>
-        </ion-row>
+      <div class="section2">
+        <ion-input
+          type="email"
+          formControlName="email"
+          placeholder="Digite seu email"
+          ><ion-icon name="mail-outline"></ion-icon
+        ></ion-input>
+
+        <ion-input
+          type="password"
+          formControlName="password"
+          placeholder="Digite sua senha"
+          ><ion-icon name="lock-closed-outline"></ion-icon
+        ></ion-input>
+      </div>
+
+      <p>
+        <a href="#">Esqueci a senha</a>
+      </p>
+
+      <ion-row>
+        <ion-col>
+          <ion-button
+            class="font-Bold"
+            expand="round"
+            fill="outline"
+            color="favorite"
+            (click)="back()"
+            >Voltar</ion-button
+          >
+        </ion-col>
+
+        <ion-col>
+          <ion-button
+            class="font-Bold"
+            expand="round"
+            color="favorite"
+            (click)="login()"
+            ><span>...</span> Login <span>...</span></ion-button
+          >
+        </ion-col>
+      </ion-row>
       <!-- </ion-card> -->
-
-      
-
     </form>
   </div>
-
 </ion-content>
