--- a/src/app/pets/pets.page.scss
+++ b/src/app/pets/pets.page.scss
@@ -2,12 +2,16 @@ ion-content {
     --ion-background-color: #01aebc;
 }
 
+ion-toolbar {
+    --background: #02818a;
+    --border-color: transparent;
+}
+
 ion-row {
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #02818a;
 }
 
 ion-col {
-    // text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
