--- a/src/app/sos-page/sos-page.page.html
+++ b/src/app/sos-page/sos-page.page.html
@@ -1,30 +1,29 @@
+<ion-header class="ion-no-border">
+  <ion-toolbar lines="none">
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content>
-
   <div id="centralizar">
-
-    <form class="ion-text-center">
-
-        <div class="section2">
-          <div class="section">
-            <img src="../../assets/image/ionPet.png" alt="Logo">
-          </div>
-
-          <ion-input class='email' type="text" placeholder="Digite o nome do pet" class="nome"><ion-icon name="paw"></ion-icon></ion-input>
-        </div>
-  
-        <ion-row class="btn">
-  
+    <form class="ion-text-center" [formGroup]="sosForm" (ngSubmit)="sos()">
+        <ion-row>
           <ion-col>
-            <ion-button class="font-Bold" expand="round" fill="outline" color="favorite" (click)="dismiss()">Enviar</ion-button>
+            <img src="{{ pet.photo_url || '../../assets/image/cachorro.png' }}" alt="Pet">
+            <h1>{{ pet.name }}</h1>
           </ion-col>
-  
-          <!-- <ion-col>
-            <ion-button class="font-Bold" expand="round" color="favorite" (click)="carregarTela('pet')">Enviar</ion-button>
-          </ion-col> -->
         </ion-row>
 
-      
+        <ion-row>
+          <ion-col>
+            <p>Como podemos te ajudar?</p>
+            <ion-textarea formControlName="description" placeholder="Palavras chaves do problema (ex: vacinas, castração, 24 horas...)"></ion-textarea>
+          </ion-col>
+        </ion-row>
 
+        <ion-button type="submit" class="font-Bold" expand="round" color="favorite">Enviar</ion-button>
     </form>
   </div>
 
