--- a/src/app/sos-page/sos-page.page.scss
+++ b/src/app/sos-page/sos-page.page.scss
@@ -2,10 +2,45 @@ ion-content {
     --ion-background-color: #01aebc;
 }
 
-#centralizar {
-    position: absolute;
-    left: 0px;
-    right: 0px;
-    top: 18%;
-    margin: 0px 15px;
+ion-toolbar {
+    --background: #02818a;
+    --border-color: transparent;
+}
+
+form {
+    padding: 35px 25px;
+    height: 100vh;
+}
+
+ion-row {
+    margin: 15px 0;
+}
+
+img {
+    width: 120px;
+    height: 120px;
+}
+
+h1 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.3rem;
+    font-weight: 600;
+    text-decoration: underline;
+
+    // border-bottom: 2px solid rgb(16, 77, 82);
+
+    // width: 90px;
+    color: rgb(255, 255, 255);
+}
+
+ion-textarea {
+    border: 1px solid white;
+    border-radius: 15px;
+    background-color: rgba(255, 255, 255, 0.219);
+
+    height: 100px;
+}
+
+ion-button {
+    margin-top: 25px;
 }
